person route added
person route added

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,5 @@
 @()
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+@main("Resume Builder") {
+  <h1>Insanity: doing the same thing over and over again and expecting different results!</h1>
 }
